# tools

./: pyproject.toml
.github/workflows/: earthly_project_check.yml  publish_burny_common.yml  python_examples.yml  test_discord_bot.yml  test_fastapi_server.yml  test_stream_announcer.yml  test_transcriber_backend.yml
ansible/: hosts  setup_cloudflare_a_record.yml
ansible/100_simple_ping/: ping.yml
ansible/100_simple_ping/group_vars/: all.yml  server_group2.yml
ansible/service_audiobookshelf/: audiobookshelf_setup.yml  docker-compose.yml
ansible/service_authelia/: authelia_setup.yml  docker-compose.yml
ansible/service_baikal/: baikal_setup.yml  docker-compose.yml
ansible/service_bookstack/: bookstack_setup.yml  docker-compose.yml
ansible/service_change_detection/: changedetection_setup.yml  docker-compose.yml
ansible/service_cloudflared/: docker-compose.yml  setup_cloudflared.yml  setup_cloudflared_create_cname.yml
ansible/service_cocalc/: cocalc.service
ansible/service_dev_test_db/: db_setup.yml  docker-compose.yml
ansible/service_docker_registry/: docker-compose.yml  docker_registry_setup.yml  htpasswd
ansible/service_factorio/files/: factorio.service
ansible/service_jellyfin/: docker-compose.yml  jellyfin_setup.yml
ansible/service_minio/: docker-compose.yml  minio_setup.yml
ansible/service_navidrome/: docker-compose.yml  navidrome_setup.yml
ansible/service_owncloud/: docker-compose.yml  owncloud_setup.yml
ansible/service_paperless/: docker-compose.yml  paperless_setup.yml
ansible/service_pihole/: docker-compose.yml
ansible/service_portainer/: portainer_setup.yml
ansible/service_postgres/: backup_postgres.sh  docker-compose.yml  postgres_setup.yml
ansible/service_rdiff_backup/: backup_script.sh  rdiff_backup_setup.yml
ansible/service_reactive_resume/: docker-compose.yml  reactive_resume_setup.yml
ansible/service_sonarcube/: docker-compose.yml
ansible/service_stirling/: docker-compose.yml
ansible/service_syncthing/: docker-compose.yml  syncthing_setup.yml
ansible/service_traefik/: docker-compose.yml  docker-compose_remote.yml  traefik_setup.yml
ansible/service_trillium/: docker-compose.yml  trillium.service  trillium_setup.yml
ansible/service_uptime_kuma/: docker-compose.yml  uptime_kuma_setup.yml
ansible/setup_pc/: setup_server.yml
ansible/setup_pc/setup_arch/: hosts  main.yml  run.sh
ansible/setup_pc/setup_chromebook/: hosts  main.yml  requirements.yml  (+1 more)
burny_common/: .earthlyignore  .pyre_configuration  Earthfile  pyproject.toml
discord_bot/: .dockerignore  .env.example  .gitignore  Dockerfile  Earthfile  deploy_playbook.yml  docker-compose.yml  pyproject.toml
discord_bot/prisma/: schema.prisma
discord_bot/src/: cache.py  discord_bot.py
discord_bot/src/commands/: mmr_models.py  public_emotes.py  public_fetch_aoe4.py  public_leaderboard.py  public_mmr.py  public_remind.py  public_twss.py
fastapi_server/: .earthlyignore  .env  .env.example  Dockerfile  Earthfile  README.md  deploy_playbook.yml  docker-compose.yml  pyproject.toml
fastapi_server/src/: app.py
fastapi_server/src/routes/: cookies_and_guards.py  hello_world.py  login_logout.py  temp_multiswap.py  text_to_speech.py
fastapi_server/src/routes/audiobook/: book.py  epub_upload.py  index.py  schema.py  temp_generate_tts.py
fastapi_server/src/routes/replay_comparer/: replay_comparer.py
fastapi_server/src/routes/replay_renamer/: replay_renamer.py
fastapi_server/src/routes/telegram_browser/: cookies_and_guards.py  telegram_browser.py
fastapi_server/src/routes/tts/: generate_tts.py  irc_bot_async.py
fastapi_server/src/templates/: header.html  nav.html
fastapi_server/src/templates/audiobook/: epub_book.html  epub_chapter.html  epub_upload.html  index.html  overview_books.html
fastapi_server/src/templates/chat/: chat_header.html  chat_input.html  chat_message.html  chat_typing.html  chat_user.html  index.html
fastapi_server/src/templates/login/: index.html
fastapi_server/src/templates/multiswap/: temp_multiswap.html  temp_multiswap_index.html
fastapi_server/src/templates/telegram_browser/: columns_reorder_dialog.html  index.html  search_result_icons.html  search_results.html  view_media_dialog.html  view_media_dialog_empty.html
fastapi_server/src/templates/todo/: index.html
fastapi_server/src/templates/tts/: index.html  new_audio.html  overlay_index.html
fastapi_server/src/workers/: convert_audiobook.py  prevent_overflowing_audiobook_bucket.py
fastapi_server/test/: base_test.py  test_prisma.py
fastapi_server/test/endpoints/audiobook/: test_read_epub.py  test_route_upload_epub.py
fastapi_server/test/endpoints/login/: test_login_github.py  test_login_twitch.py  test_logout.py
problem_sites/leetcode/python/: pyproject.toml
problem_sites/leetcode/python/python_src/: 1033.py  1038.py  190.py  200.py  201.py  2419.py  287.py  292.py  300.py  319.py  420.py  p760.py
python_examples/: pyproject.toml
python_examples/src/discrete_structures/: permutation.py
python_examples/src/examples/databases/: readme_beanie_example.py  readme_mongoengine_example.py  readme_prisma_example.py  readme_psycopg3_example.py  sqlite_example.py
python_examples/src/examples/databases/alpine_psycopg3/: Dockerfile  main.py  pyproject.toml  run.sh
python_examples/src/examples/movies/: add_text_to_files.py  concatenate_videos.py  extract_subclip_add_text.py
python_examples/src/examples/other/: with_context_manager.py
transcribe_website/transcriber_backend/: Earthfile  README.md  pyproject.toml
transcribe_website/transcriber_backend/prisma/: schema.prisma
transcribe_website/transcriber_backend/src/: hard_burn_subtitles.py  helper.py  srt_writer.py  transcribe_file.py  translate.py  words_extractor.py
transcribe_website/transcriber_backend/test/: test_compression.py
twitch_stream_announcer/: .dockerignore  .env.example  .gitignore  Dockerfile  Earthfile  README.md  deploy_playbook.yml  docker-compose.yml  main.nim  pyproject.toml  run_nim.sh  twitch_stream_announcer.nimble
twitch_stream_announcer/src/: main.nim  stream_announcer.py
(+32 files in other folders)
