[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    # Datetime library
    "arrow>=1.3.0",
    # Discord bot
    "hikari>=2.1.0",
    # Simple logger
    "loguru>=0.7.3",
    # postgres client
    "prisma>=0.15.0",
    # Table plotting
    "ptable>=0.9.2",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    # Argparse with dataclass
    "simple-parsing>=0.1.6",
    # Table as ascii art
    "table2ascii>=1.1.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.122.3",
    "pyre-check>=0.9.23",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.3",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true
allow_split_before_dict_value = false

[tool.ruff]
target-version = 'py310'
line-length = 120

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "C4",  # flake8-comprehensions
    "E",   # Error
    "F",   # pyflakes
    "BLE", # flake8-blind-except
    # "I",   # isort
    "N",   # pep8-naming
    "PGH", # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "W",   # Warning
    "Q",   # flake8-quotes
    "YTT", # flake8-2020
    "UP",  # pyupgrade
    #    "A",  # flake8-builtins
]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
pep8-naming.classmethod-decorators = ["pydantic.validator", "classmethod"]
