[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.9, <3.14"
dependencies = [
    "aiohttp>=3.11.2",
    "arrow>=1.3.0",
    "dataset>=1.6.2",
    "discord>=2.3.2",
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "twitchapi>=4.3.1",
]

[tool.uv]
dev-dependencies = ["pyre-check>=0.9.23", "ruff>=0.7.4", "toml>=0.10.2"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
split_arguments_when_comma_terminated = true
dedent_closing_brackets = true
allow_split_before_dict_value = false

[tool.ruff]
target-version = 'py310'
line-length = 120

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "C4",  # flake8-comprehensions
    "E",   # Error
    "F",   # pyflakes
    "BLE", # flake8-blind-except
    # "I",   # isort
    "N",   # pep8-naming
    "PGH", # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "W",   # Warning
    "Q",   # flake8-quotes
    "YTT", # flake8-2020
    "UP",  # pyupgrade
    #    "A",  # flake8-builtins
]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
pep8-naming.classmethod-decorators = ["pydantic.validator", "classmethod"]
